<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Aceptar</string>
    <string name="action_all">Todas</string>
    <string name="action_facebook">Facebook</string>
    <string name="action_favorite">Favorito</string>
    <string name="action_google">Google +</string>
    <string name="action_gps">GPS</string>
    <string name="action_in_service">En operación</string>
    <string name="action_map">Mapa</string>
    <string name="action_refresh">Recargar</string>
    <string name="action_reportar">Reportar</string>
    <string name="action_search">Buscar</string>
    <string name="action_settings">Settings</string>
    <string name="action_twitter">Twitter</string>
    <string name="add">AÑADIR</string>
    <string name="address">Mueva el mapa para cargar dirección</string>
    <string name="address.hint">Dirección</string>
    <string name="admobAppId">ca-app-pub-3916193284422795~1906201417</string>
    <string name="admobBannerNative">ca-app-pub-3916193284422795/5098041813</string>
    <string name="admob_advanced">ca-app-pub-3916193284422795/7269620861</string>
    <string name="admob_interstitial">ca-app-pub-3916193284422795/1333994617</string>
    <string name="alarm.cancel">¿Desea cancelar la alarma para tiempos de trasbordos?</string>
    <string name="alarm.enable">¿Desea activar la alarma para tiempos de trasbordos?</string>
    <string name="alarm.notify">Será notificado cuando resten XXX minutos de trasbordo</string>
    <string name="alarm.title">Alarma de Tiempo de Transbordo</string>
    <string name="app_name">Transmilenio y SITP</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="arrive">Llegada en %s minutos</string>
    <string name="asignar_alarma_transbordos">Asignar alarma para transbordos</string>
    <string name="backPress">Presione atrás de nuevo para salir</string>
    <string name="bePremium">Quitar publicidad por un año</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="browser.choose.line">Seleccione Linea</string>
    <string name="browser.end.station">Ahora seleccione la estación de destino</string>
    <string name="browser.start.station">Seleccione la estación de origen</string>
    <string name="browser.tap.station">Presione la estación que desea consultar</string>
    <string name="btnContinue">Continuar</string>
    <string name="close">Cerrar</string>
    <string name="comments">Envíenos sus comentarios</string>
    <string name="deleteAdsYear">Eliminar publicidad por un año</string>
    <string name="developed">Desarrollado Por:</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_phone">Número celular</string>
    <string name="independent">Somos una iniciativa independiente</string>
    <string name="kmh">Km/h</string>
    <string name="leosites">LeoSites</string>
    <string name="login">Iniciar Sesión</string>
    <string name="mapa">Mapa</string>
    <string name="message_authentication">Para poder seguir debes autenticarte.</string>
    <string name="noAdsVersion">Quitar publicidad</string>
    <string name="noticication">Notificaciones</string>
    <string name="rastrear_ruta">Rastrear ruta</string>
    <string name="rateAfter">RECORDARME LUEGO</string>
    <string name="rateDesc">Como iniciativa independiente contamos con tu apoyo para ser mejores</string>
    <string name="rateLike">¿Te gusta nuestra aplicación?</string>
    <string name="rateNo">NO, GRACIAS</string>
    <string name="rateOpt">CALIFICAR</string>
    <string name="sign_in">Autenticación</string>
    <string name="terms">Acepto términos y condiciones de</string>
    <string name="title_section_about">Acerca de</string>
    <string name="title_section_calc_taxi">Taximetro</string>
    <string name="title_section_config">Configuración</string>
    <string name="title_section_favorites">Favoritos</string>
    <string name="title_section_help">Ayuda</string>
    <string name="title_section_home">Inicio</string>
    <string name="url">http://movilixa.com</string>
    <string name="user_authentication">Autenticación Usuario</string>
    <string name="version">Versión</string>
    <string name="visit">Visita nuestros proyectos</string>
</resources>