<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@id/grp1">
        <item android:icon="@drawable/ic_action_home" android:id="@id/nav_home" android:title="@string/title_section_home" />
    </group>
    <group android:id="@id/grp2">
        <item android:icon="@drawable/ic_action_favorites" android:id="@id/nav_favorites" android:title="@string/title_section_favorites" />
        <item android:icon="@drawable/ic_calculator" android:id="@id/nav_calc_taxi" android:title="@string/title_section_calc_taxi" />
    </group>
    <group android:id="@id/grpSettings" android:checkableBehavior="none">
        <item android:icon="@drawable/ic_action_settings" android:id="@id/nav_settings" android:title="@string/title_section_config" />
        <item android:icon="@drawable/ic_action_help" android:id="@id/nav_help" android:title="@string/title_section_help" />
        <item android:icon="@drawable/feedback" android:id="@id/nav_feedback" android:title="@string/comments" />
        <item android:icon="@drawable/ic_action_about" android:id="@id/nav_about" android:title="@string/title_section_about" />
    </group>
</menu>