<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:id="@id/lytLinr1" android:paddingTop="20.0dip" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="5.0">
            <TextView android:textColor="@android:color/black" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/txtAppName" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textColor="@android:color/black" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/txtIndependent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/independent" />
            <TextView android:textColor="@android:color/black" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/txtVersionApp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/version" />
            <TextView android:textColor="@android:color/black" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/txtDeveloped" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/developed" />
            <TextView android:textColor="@android:color/black" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/txtLeosites" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/leosites" />
            <TextView android:textColor="@android:color/black" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/txtUrl" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/url" />
            <TextView android:textColor="@android:color/black" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/txtVisit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/visit" />
            <ImageView android:layout_gravity="center_horizontal" android:id="@id/btnPlayStore" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:src="@drawable/btn_play_store" />
            <Button android:textColor="@android:color/white" android:layout_gravity="center_horizontal" android:id="@id/btnClose" android:background="@drawable/btn_close" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/close" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>